wasm/genomic_gen_random_dna_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_3abfdgct/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/75a5dbe0cff3257f15b76722661c1f9e8d5c7fda.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/75a5dbe0cff3257f15b76722661c1f9e8d5c7fda.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/f8a1b3717e3cfec05c3c06ebdd644f1281e0bcf3.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/f8a1b3717e3cfec05c3c06ebdd644f1281e0bcf3.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/1737d78ecdf32ff513d4897cb5aa3fd1a857626d.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/1737d78ecdf32ff513d4897cb5aa3fd1a857626d.json" for subsequent builds)
cache:INFO:  - ok
